syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

import "gogoproto/gogo.proto";

message TSS {
  string tss_pubkey = 3;
  repeated string signer_list = 4;
  int64 finalizedZetaHeight = 5;
  int64 keyGenZetaHeight = 6;
}
